# seedsigner-lvgl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  implementation_result.json  pr_manager_result.json  test_report.json
.github/workflows/: ci.yml
bindings/: micropython.cmake
bindings/micropython/: micropython.mk  mod_uiseedsigner.c
bindings/micropython/examples/: menu_navigation.py  scan_flow.py
bindings/usermod_uiseedsigner/: micropython.cmake  micropython.mk  mod_uiseedsigner.c
config/: lv_conf.h
docs/: scenario-suite.md  screenshot_diff.md
docs/api/: EXTERNAL_API.md  SETTINGS_CONTRACT.md  STATE_MODEL.md
docs/architecture/: ADR-0001-design-first.md  ADR-0002-external-flow-control.md  ADR-0003-outbound-event-queue.md  ADR-0004-screen-context.md  ADR-0005-contracts-pattern.md  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  MILESTONES.md  PROJECT_SCOPE.md
docs/bindings/: MICROPYTHON.md
docs/camera/: CAMERA_CONTRACT.md  FRAME_FORMATS.md
docs/development/: HOST_BUILD.md  SCREENSHOTS.md
docs/discovery/: seedsigner-screen-parity-matrix.md  seedsigner-ui-inventory.md
docs/embedded/: ESP32_P4_PR_FLOW.md  ESP32_P4_WAVESHARE_4B.md
embedded/esp32p4/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
embedded/esp32p4/components/esp32_p4_wifi6_touch_lcd_4b/: CMakeLists.txt  Kconfig  esp32_p4_wifi6_touch_lcd_4b.c  idf_component.yml
embedded/esp32p4/components/esp_codec_dev/: CMakeLists.txt
embedded/esp32p4/components/esp_codec_dev/platform/: audio_codec_ctrl_spi.c
embedded/esp32p4/components/esp_lcd_st7703/: esp_lcd_st7703.c
embedded/esp32p4/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
examples/: host_desktop_demo.cpp  host_sim_demo.cpp
examples/scenarios/: main_menu_walk.json
include/seedsigner_lvgl/bindings/: c_api.h
include/seedsigner_lvgl/components/: TopNavBar.hpp
include/seedsigner_lvgl/contracts/: CameraContract.hpp  KeyboardContract.hpp  PSBTDetailContract.hpp  PSBTMathContract.hpp  PSBTOverviewContract.hpp  QRDisplayContract.hpp  RouteDescriptor.hpp  RouteId.hpp  ScreensaverContract.hpp  SeedWordsContract.hpp  SettingsContract.hpp  StartupSplashContract.hpp
include/seedsigner_lvgl/desktop/: ScenarioRunner.hpp
include/seedsigner_lvgl/input/: InputMapper.hpp  InputProfile.hpp
include/seedsigner_lvgl/navigation/: NavigationController.hpp
include/seedsigner_lvgl/platform/: FramebufferCapture.hpp  HeadlessDisplay.hpp  SdlDisplay.hpp
include/seedsigner_lvgl/runtime/: CameraFrame.hpp  Event.hpp  EventQueue.hpp  InputEvent.hpp  UiRuntime.hpp
include/seedsigner_lvgl/scan/: QrDecoder.hpp
include/seedsigner_lvgl/screen/: Screen.hpp  ScreenRegistry.hpp
include/seedsigner_lvgl/screens/: CameraPreviewScreen.hpp  DireWarningScreen.hpp  ErrorScreen.hpp  KeyboardScreen.hpp  MenuListScreen.hpp  PSBTDetailScreen.hpp  PSBTMathScreen.hpp  PSBTOverviewScreen.hpp  PlaceholderScreen.hpp  QRDisplayScreen.hpp  ResultScreen.hpp  ScanScreen.hpp  ScreensaverScreen.hpp  SeedWordsScreen.hpp  SettingsMenuScreen.hpp  SettingsSelectionScreen.hpp  StartupSplashScreen.hpp  WarningScreen.hpp
include/seedsigner_lvgl/visual/: DisplayProfile.hpp  SeedSignerTheme.hpp
scenarios/: 01_menu_navigation.json  02_settings_selection.json  03_warning.json  04_error.json  05_dire_warning.json  06_result.json  07_qr_display.json  08_keyboard.json  09_seed_words.json  10_psbt_overview.json  11_startup_splash.json
screenshots/: .gitignore
src/assets/: icons.c  icons.h
src/bindings/: c_api.cpp
src/components/: TopNavBar.cpp
src/contracts/: CameraContract.cpp  KeyboardContract.cpp  PSBTDetailContract.cpp  PSBTMathContract.cpp  PSBTOverviewContract.cpp  QRDisplayContract.cpp  ScreensaverContract.cpp  SeedWordsContract.cpp  SettingsContract.cpp  StartupSplashContract.cpp
src/desktop/: ScenarioRunner.cpp
src/input/: InputProfile.cpp
src/navigation/: NavigationController.cpp
src/platform/: FramebufferCapture.cpp  HeadlessDisplay.cpp  SdlDisplay.cpp
src/runtime/: EventQueue.cpp  UiRuntime.cpp
src/scan/: QrDecoder.cpp
src/screen/: ScreenRegistry.cpp
src/screens/: CameraPreviewScreen.cpp  DireWarningScreen.cpp  ErrorScreen.cpp  KeyboardScreen.cpp  MenuListScreen.cpp  PSBTDetailScreen.cpp  PSBTMathScreen.cpp  PSBTOverviewScreen.cpp  PlaceholderScreen.cpp  QRDisplayScreen.cpp  ResultScreen.cpp  ScanScreen.cpp  ScreensaverScreen.cpp  SeedWordsScreen.cpp  SettingsMenuScreen.cpp  SettingsSelectionScreen.cpp  StartupSplashScreen.cpp  WarningScreen.cpp
src/visual/: DisplayProfile.cpp  SeedSignerTheme.cpp
tests/: bridge_stress_tests.cpp  c_api_test.cpp  event_queue_smoke_test.cpp  input_profile_tests.cpp  navigation_runtime_tests.cpp  profile_matrix_runner.cpp  scenario_suite_runner.cpp  screenshot_tests.cpp  ui_runtime_smoke_test.cpp
tools/: build_micropython_host_libs.sh  screenshot_diff.py
